# sccvi_impl

./: .gitignore  IMPORT_TESTS_README.md  README.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  run_all_import_tests.sh  run_benchmarking_pipeline.py  setup.py  test_all_imports.py  test_import_usage.py  test_imports.py  test_imports_pytest.py
src/sccvi_impl/: __init__.py  run_benchmark_and_dashboard.sh
src/sccvi_impl/Models/scCausalVI/data/dataloaders/: data_splitting.py  scCausalVI_dataloader.py
src/sccvi_impl/benchmarking/: README.md  __init__.py  dashboard.py  model_benchmark.py  run_benchmark.py  run_dashboard.py
src/sccvi_impl/cloud/: CLOUD_GUIDE.md  README_cloud.md  cloud_script.py  jarvis_gpu_runner.py  run_remote_benchmark.sh  submit_to_gcloud.sh
src/sccvi_impl/data/: Download_Dataset.py  utils.py
src/sccvi_impl/data/dataloaders/: data_splitting.py
src/sccvi_impl/model/: __init__.py  model_1.py  scCausalVI.py
src/sccvi_impl/model/base/: __init__.py  model_1_training_mixin.py  training_mixin.py
src/sccvi_impl/module/: model_1.py  scCausalVI.py
src/sccvi_impl/results/simulated/: benchmark_results.csv
src/sccvi_impl/scripts/: benchmarking_guide.md  simulated_benchmarking.py
